# NCEP

./: .gitignore  README.md  main.py  pyproject.toml
DUAMEL/: build_corrected_output.py  route_cfe.py
Duhamel/: build_corrected_output.py  route_cfe.py  routing_coefficients_study_area.csv
HRRR/: download_hrrr.py  inject_hrrr.py
MRMS/: displace.py  displace_and_run.py  download_mrms.py  mrms_reprojection.py
event2022/: README.md
event2022/scripts/: 01_download_mrms.py  02_mrms_reprojection.py  03_zonal_stats_and_run.py  04_build_corrected_output.py  05_download_hrrr.py  06_inject_hrrr.py  07_zonal_stats_and_run.py  08_build_corrected_output.py
general/: copy_forcings_and_run.py
