[project]
name = "ncep"
version = "0.1.0"
description = "UV environment for reproducing the code of NCEP project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "eccodes>=2.47.0",
    "herbie-data>=2026.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pyresample>=1.35.0",
    "rioxarray>=0.22.0",
    "s3fs>=2026.6.0",
    "xarray>=2026.4.0",
]
