[project]
name = "ncep"
version = "0.1.0"
description = "UV environment for reproducing the code of NCEP project. Jupyter is here just for development purposes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "cmweather>=0.3.2",
    "eccodes>=2.47.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "numpy>=2.5.1",
    "pandas<3.0.0",
    "pyresample>=1.35.0",
    "s3fs==2024.3.1",
    "xarray==2024.2.0",
    "zarr==2.17.1",
    "xarray-regrid>=0.4.2",
    "herbie-data>=2024.8.0",
    "rioxarray>=0.17.0",
    "ngiab-data-preprocess>=4.6.1",
    "cfgrib>=0.9.15.1",
]
